--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second repo</title>
+    <link rel="stylesheet" href="color.css">
 </head>
 <body>
     <div><h1>hello</h1></div>
     <div><h1>hello 2nd</h1></div>
     <div><h1>hello 3rd</h1></div>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, incidunt?</p>
 </body>
 </html>
