add log in page

--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
     <link rel="stylesheet" href="color.css">
 </head>
 <body>
-    <div><h1>hello</h1></div>
-    <div><h1>hello 2nd</h1></div>
-    <div><h1>hello 3rd</h1></div>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, incidunt?</p>
+ <div id="form">
+<h4>Log in </h4>
+<form action="">
+<label for="Name">Name:</label>
+<input type="text" placeholder="Enter Your name"> <br><br>
+<label for="gmail">Gmail:</label>
+<input type="text" placeholder="Enter Your Gmail">
+<br><br>
+<label for="password">password:</label>
+<input type="password" placeholder="Enter Your password">
+<br><br>
+<Div></Div>
+<input type="button" value="submit">
+
+</form>
+</div>
 </body>
 </html>
